[package]
name = "carotcardsrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.macroquad]
version = "0.3.23"

[dependencies.glob]
version = "0.3.0"

[dependencies.uuid]
version = "1.1.2"
features = ["v4", "fast-rng"]